fix: slideshow image height on mobile | button label styles fixes

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -64,7 +64,7 @@
 
   .banner--large.banner--mobile-bottom:not(.banner--adapt) .banner__media,
   .banner--large.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
-    height: 24rem;
+    /* height: 24rem; */
   }
 
   .banner--small:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
@@ -164,6 +164,12 @@
   left: 0;
   top: 0;
   width: 100%;
+}
+
+.banner__media img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .banner__media-half {
@@ -480,7 +486,7 @@
 }
 
 .banner__box > * + .banner__buttons {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 
 @media screen and (max-width: 749px) {
@@ -518,6 +524,7 @@
   border-radius: 5px;
   margin-top: 10px;
   width: auto;
-  font-size: 16px;
+  font-size: 32px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, .3);
   cursor: pointer !important;
 }
